--- a/MadLibs/Views/Home/Form.cshtml
+++ b/MadLibs/Views/Home/Form.cshtml
@@ -5,5 +5,15 @@
   </head>
   <body>
     <h1>Mad Libs</h1>
+    <p>Please fill in the form:</p>
+    <form action="/result">
+      <label for="noun1">Noun:</label>
+      <input id="noun1" name="noun1" type="text">
+      <label for="verb1">Verb:</label>
+      <input id="verb1" name="verb1" type="text">
+      <label for="verb2">Verb:</label>
+      <input id="verb2" name="verb2" type="text">
+      <button type="submit">Start</button>
+    </form>
   </body>
 </html>
