Fix typo in Form
Co-authored-by: Monica Barboza <MonBoza@users.noreply.github.com>

--- a/MadLibs/Views/Home/Form.cshtml
+++ b/MadLibs/Views/Home/Form.cshtml
@@ -6,7 +6,7 @@
   <body>
     <h1>Mad Libs</h1>
     <p>Please fill in the form:</p>
-    <form action="/result">
+    <form action="/MadLib">
       <label for="Name1">Enter a Name</label>
       <input type="text" id="Name1" name="Name1" />
       <br />
@@ -28,8 +28,8 @@
       <label for="Noun2">Enter a Noun</label>
       <input type="text" id="Noun2" name="Noun2" />
       <br />
-      <label for="Verb2">Enter a Verb</label>
-      <input type="text" id="Verb2" name="Verb2" />
+      <label for="Verb1">Enter a Verb</label>
+      <input type="text" id="Verb1" name="Verb1" />
       <br />
       <label for="Clothing1">Enter a Clothing Item</label>
       <input type="text" id="Clothing1" name="Clothing1" />
