--- a/MadLibs/Views/Home/Form.cshtml
+++ b/MadLibs/Views/Home/Form.cshtml
@@ -6,7 +6,7 @@
   <body>
     <h1>Mad Libs</h1>
     <p>Please fill in the form:</p>
-    <form action="/MadLib">
+    <form action="/madLib" method="post">
       <label for="Name1">Enter a Name</label>
       <input type="text" id="Name1" name="Name1" />
       <br />
