--- a/MadLibs/Views/Home/Story2Form.cshtml
+++ b/MadLibs/Views/Home/Story2Form.cshtml
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Mad Libs</title>
+    <title>Story 2 Mad Libs</title>
   </head>
   <body>
     <h1>Mad Libs</h1>
     <p>Please fill in the form:</p>
-    <form action="/madLib" method="post">
+    <form action="/story2" method="post">
       <label for="Name1">Enter a Name</label>
       <input type="text" id="Name1" name="Name1" />
       <br />
