--- a/MadLibs/Views/Home/Homepage.cshtml
+++ b/MadLibs/Views/Home/Homepage.cshtml
@@ -5,12 +5,12 @@
     <link rel="stylesheet" type="text/css" href="~/css/HomeStyles.css" />
   </head>
   <body>
-    <h1>Awesome Mad Lib Maker!</h1>
+    <h1>Awesome <img src="~/img/madlib.png" width="10%"/> Maker!</h1>
     <p>Hello there! Please choose a Mad Lib from the list below.</p>
-    <div>
-      <button><a href="/story1form">Story 1</a></button>
-      <br />
-      <button><a href="/story2form">Story 2</a></button>
+    <div class="slide-in-right">
+      <a href="/story1form"><button>Story 1</button></a>
+      
+      <a href="/story2form"><button>Story 2</button></a>
     </div>
   </body>
 </html>
