--- a/MadLibs/Views/Home/Story1Form.cshtml
+++ b/MadLibs/Views/Home/Story1Form.cshtml
@@ -2,83 +2,110 @@
 <html>
 <head>
   <title>Story 1 Mad Libs</title>
+   <link rel="stylesheet" type="text/css" href="~/css/HomeStyles.css" />
 </head>
 
 <body>
   <h1>Story 1 Mad Libs</h1>
   <p>Please fill in the form:</p>
   <form action="/story1" method="post">
-    <label for="Adjective1">Enter an adjective</label>
-    <input type="text" id="Adjective1" name="Adjective1" /><br />
+    <div class="formInputColumns">
+      <div class="inputColumn">
+        <label for="Adjective1">Enter an adjective</label>
+        <br />
+        <input type="text" id="Adjective1" name="Adjective1" /><br />
 
-    <label for="Noun1">Enter a noun</label>
-    <input type="text" id="Noun1" name="Noun1" /><br />
+        <label for="Noun1">Enter a noun</label>
+        <br />
+        <input type="text" id="Noun1" name="Noun1" /><br />
 
-    <label for="Adjective2">Enter an adjective</label>
-    <input type="text" id="Adjective2" name="Adjective2" /><br />
+        <label for="Adjective2">Enter an adjective</label>
+        <br />
+        <input type="text" id="Adjective2" name="Adjective2" /><br />
 
-    <label for="NounPlace">Enter a place noun</label>
-    <input type="text" id="NounPlace" name="NounPlace" /><br />
+        <label for="NounPlace">Enter a place noun</label>
+        <br />
+        <input type="text" id="NounPlace" name="NounPlace" /><br />
 
-    <label for="Adjective3">Enter an adjective</label>
-    <input type="text" id="Adjective3" name="Adjective3" /><br />
+        <label for="Adjective3">Enter an adjective</label>
+        <br />
+        <input type="text" id="Adjective3" name="Adjective3" /><br />
 
-    <label for="Adjective4">Enter an adjective</label>
-    <input type="text" id="Adjective4" name="Adjective4" /><br />
+        <label for="Adjective4">Enter an adjective</label>
+        <br />
+        <input type="text" id="Adjective4" name="Adjective4" /><br />
 
-    <label for="VehiclePlural1">Enter a plural vehicle noun</label>
-    <input type="text" id="VehiclePlural1" name="VehiclePlural1" /><br />
+        <label for="VehiclePlural1">Enter a plural vehicle noun</label>
+        <br />
+        <input type="text" id="VehiclePlural1" name="VehiclePlural1" /><br />
 
-    <label for="Adjective5">Enter an adjective</label>
-    <input type="text" id="Adjective5" name="Adjective5" /><br />
+        <label for="Adjective5">Enter an adjective</label>
+        <br />
+        <input type="text" id="Adjective5" name="Adjective5" /><br />
 
-    <label for="Adjective6">Enter an adjective</label>
-    <input type="text" id="Adjective6" name="Adjective6" /><br />
+        <label for="Adjective6">Enter an adjective</label>
+        <br />
+        <input type="text" id="Adjective6" name="Adjective6" /><br />
 
-    <label for="NounPlural1">Enter a plural noun</label>
-    <input type="text" id="NounPlural1" name="NounPlural1" /><br />
+        <label for="NounPlural1">Enter a plural noun</label>
+        <br />
+        <input type="text" id="NounPlural1" name="NounPlural1" /><br />
 
-    <label for="Adjective7">Enter an adjective</label>
-    <input type="text" id="Adjective7" name="Adjective7" /><br />
+        <label for="Adjective7">Enter an adjective</label>
+        <br />
+        <input type="text" id="Adjective7" name="Adjective7" /><br />
 
-    <label for="NounPlural2">Enter a plural noun</label>
-    <input type="text" id="NounPlural2" name="NounPlural2" /><br />
+        <label for="NounPlural2">Enter a plural noun</label>
+        <br />
+        <input type="text" id="NounPlural2" name="NounPlural2" /><br />
+      </div>
+      <div class="inputColumn">
+        <label for="NounPlural3">Enter a plural noun</label>
+        <br />
+        <input type="text" id="NounPlural3" name="NounPlural3" /><br />
 
-    <label for="NounPlural3">Enter a plural noun</label>
-    <input type="text" id="NounPlural3" name="NounPlural3" /><br />
+        <label for="Adjective8">Enter an adjective</label>
+        <br />
+        <input type="text" id="Adjective8" name="Adjective8" /><br />
 
-    <label for="Adjective8">Enter an adjective</label>
-    <input type="text" id="Adjective8" name="Adjective8" /><br />
+        <label for="NounPlural4">Enter a plural noun</label>
+        <br />
+        <input type="text" id="NounPlural4" name="NounPlural4" /><br />
 
-    <label for="NounPlural4">Enter a plural noun</label>
-    <input type="text" id="NounPlural4" name="NounPlural4" /><br />
+        <label for="Verb2">Enter a verb</label>
+        <br />
+        <input type="text" id="Verb2" name="Verb2" /><br />
 
-    <label for="Verb2">Enter a verb</label>
-    <input type="text" id="Verb2" name="Verb2" /><br />
+        <label for="Adjective9">Enter an adjective</label>
+        <br />
+        <input type="text" id="Adjective9" name="Adjective9" /><br />
 
-    <label for="Adjective9">Enter an adjective</label>
-    <input type="text" id="Adjective9" name="Adjective9" /><br />
+        <label for="Verb3"> Enter a verb</label>
+        <br />
+        <input type="text" id="Verb3" name="Verb3" /><br />
 
-    <label for="Verb3">Enter a verb</label>
-    <input type="text" id="Verb3" name="Verb3" /><br />
+        <label for="NounPlural5">Enter a plural noun</label>
+        <br />
+        <input type="text" id="NounPlural5" name="NounPlural5" /><br />
 
-    <label for="NounPlural5">Enter a plural noun</label>
-    <input type="text" id="NounPlural5" name="NounPlural5" /><br />
+        <label for="NounPluralTypeOfJob">Enter a plural type of job noun</label>
+        <br />
+        <input type="text" id="NounPluralTypeOfJob" name="NounPluralTypeOfJob" /><br />
 
-    <label for="NounPluralTypeOfJob">Enter a plural type of job noun</label>
-    <input type="text" id="NounPluralTypeOfJob" name="NounPluralTypeOfJob" /><br />
+        <label for="Adjective10">Enter an adjective</label>
+        <br />
+        <input type="text" id="Adjective10" name="Adjective10" /><br />
 
-    <label for="Adjective10">Enter an adjective</label>
-    <input type="text" id="Adjective10" name="Adjective10" /><br />
+        <label for="Verb4">Enter a verb</label>
+        <br />
+        <input type="text" id="Verb4" name="Verb4" /><br />
 
-    <label for="Verb4">Enter a verb</label>
-    <input type="text" id="Verb4" name="Verb4" /><br />
-
-    <label for="Adjective11">Enter an adjective</label>
-    <input type="text" id="Adjective11" name="Adjective11" /><br />
-
+        <label for="Adjective11">Enter an adjective</label>
+        <br />
+        <input type="text" id="Adjective11" name="Adjective11" /><br />
+      </div>
+    </div>
     <button type="submit">Submit!</button>
-
   </form>
 </body>
 
