--- a/MadLibs/Views/Home/Story2Form.cshtml
+++ b/MadLibs/Views/Home/Story2Form.cshtml
@@ -2,59 +2,67 @@
 <html>
   <head>
     <title>Story 2 Mad Libs</title>
+    <meta charset="utf-8" />
+     <link rel="stylesheet" type="text/css" href="~/css/HomeStyles.css" />
   </head>
   <body>
     <h1>Mad Libs</h1>
     <p>Please fill in the form:</p>
     <form action="/story2" method="post">
-      <label for="Name1">Enter a Name</label>
-      <input type="text" id="Name1" name="Name1" />
-      <br />
-      <label for="Number1">Enter a Number</label>
-      <input type="text" id="Number1" name="Number1" />
-      <br />
-      <label for="Adjective1">Enter an Adjective</label>
-      <input type="text" id="Adjective1" name="Adjective1" />
-      <br />
-      <label for="Color1">Enter a Color</label>
-      <input type="text" id="Color1" name="Color1" />
-      <br />
-      <label for="Noun1">Enter a Noun</label>
-      <input type="text" id="Noun1" name="Noun1" />
-      <br />
-      <label for="FoodPlural1">Enter a Plural Food</label>
-      <input type="text" id="FoodPlural1" name="FoodPlural1" />
-      <br />
-      <label for="Noun2">Enter a Noun</label>
-      <input type="text" id="Noun2" name="Noun2" />
-      <br />
-      <label for="Verb1">Enter a Verb</label>
-      <input type="text" id="Verb1" name="Verb1" />
-      <br />
-      <label for="Clothing1">Enter a Clothing Item</label>
-      <input type="text" id="Clothing1" name="Clothing1" />
-      <br />
-      <label for="Adjective2">Enter an Adjective</label>
-      <input type="text" id="Adjective2" name="Adjective2" />
-      <br />
-      <label for="Celebrity1">Enter a Celebrity</label>
-      <input type="text" id="Celebrity1" name="Celebrity1" />
-      <br />
-      <label for="Number2">Enter a Number</label>
-      <input type="text" id="Number2" name="Number2" />
-      <br />
-      <label for="Name2">Enter a Name</label>
-      <input type="text" id="Name2" name="Name2" />
-      <br />
-      <label for="Noun3">Enter a Noun</label>
-      <input type="text" id="Noun3" name="Noun3" />
-      <br />
-      <label for="Name3">Enter a Name</label>
-      <input type="text" id="Name3" name="Name3" />
-      <br />
-      <label for="Occupation1">Enter an Occupation</label>
-      <input type="text" id="Occupation1" name="Occupation1" />
-      <br />
+
+      <div class="formInputColumns">
+        <div class="inputColumn">
+          <label for="Name1">Enter a Name</label><br />
+          <input type="text" id="Name1" name="Name1" />
+          <br />
+          <label for="Number1">Enter a Number</label><br />
+          <input type="text" id="Number1" name="Number1" />
+          <br />
+          <label for="Adjective1">Enter an Adjective</label><br />
+          <input type="text" id="Adjective1" name="Adjective1" />
+          <br />
+          <label for="Color1">Enter a Color</label><br />
+          <input type="text" id="Color1" name="Color1" />
+          <br />
+          <label for="Noun1">Enter a Noun</label><br />
+          <input type="text" id="Noun1" name="Noun1" />
+          <br />
+          <label for="FoodPlural1">Enter a Plural Food</label><br />
+          <input type="text" id="FoodPlural1" name="FoodPlural1" />
+          <br />
+          <label for="Noun2">Enter a Noun</label><br />
+          <input type="text" id="Noun2" name="Noun2" />
+          <br />
+          <label for="Verb1">Enter a Verb</label><br />
+          <input type="text" id="Verb1" name="Verb1" />
+          <br />
+        </div>
+        <div class="inputColumn">
+          <label for="Clothing1">Enter a Clothing Item</label><br />
+          <input type="text" id="Clothing1" name="Clothing1" />
+          <br />
+          <label for="Adjective2">Enter an Adjective</label><br />
+          <input type="text" id="Adjective2" name="Adjective2" />
+          <br />
+          <label for="Celebrity1">Enter a Celebrity</label><br />
+          <input type="text" id="Celebrity1" name="Celebrity1" />
+          <br />
+          <label for="Number2">Enter a Number</label><br />
+          <input type="text" id="Number2" name="Number2" />
+          <br />
+          <label for="Name2">Enter a Name</label><br />
+          <input type="text" id="Name2" name="Name2" />
+          <br />
+          <label for="Noun3">Enter a Noun</label><br />
+          <input type="text" id="Noun3" name="Noun3" />
+          <br />
+          <label for="Name3">Enter a Name</label><br />
+          <input type="text" id="Name3" name="Name3" />
+          <br />
+          <label for="Occupation1">Enter an Occupation</label><br />
+          <input type="text" id="Occupation1" name="Occupation1" />
+        </div>
+      </div>      
       <button type="submit">Submit!</button>
 
     </form>
