--- a/MadLibs/Views/Home/Story1.cshtml
+++ b/MadLibs/Views/Home/Story1.cshtml
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>Mad Libs</title>
+  <meta charset="utf-8" />
+   <link rel="stylesheet" type="text/css" href="~/css/HomeStyles.css" />
 </head>
 <body>
   <h1>Star Wars Mad Libs!</h1>
