--- a/MadLibs/Views/Home/Story2.cshtml
+++ b/MadLibs/Views/Home/Story2.cshtml
@@ -2,9 +2,11 @@
 <html>
 <head>
   <title>Mad Libs</title>
+  <link rel="stylesheet" type="text/css" href="~/css/HomeStyles.css" />
 </head>
 <body>
   <h1>Welcome to Mad Libs!</h1>
+  <img src="~/img/president.png" alt="Mad Lib banner" />
   <p>My name is @Model.Name1 and I am @Model.Number1 years old. If I were president. I'd do a whole bunch of @Model.Adjective1 things : </p>
   <ol>
     <li>I would drive the biggest @Model.Color1 car in the country. And that car would go faster than any other @Model.Noun1 in the world!</li>
@@ -14,5 +16,6 @@
     <li>School would be open only @Model.Number2 days a year.</li>
     <li>I would give my friends the best jobs. I would nominate @Model.Name2 to be secretary of (the) @Model.Noun3, and @Model.Name3 could be vice @Model.Occupation1</li>
   </ol>
+  
 </body>
 </html>
